# DoBeeDo

./: CMakeLists.txt  README  doapp.cpp  doapp.h  dobeedo.desktop  dobeedoui.rc  editdialog.cpp  editdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  settings.cpp  settings.h  systray.cpp  systray.h  todoobject.cpp  todoobject.h
config/: categorywidget.cpp  categorywidget.h  configdialog.cpp  configdialog.h  generalwidget.cpp  generalwidget.h  prioritywidget.cpp  prioritywidget.h
model/: filtermodel.cpp  filtermodel.h  tododelegate.cpp  tododelegate.h  todomodel.cpp  todomodel.h  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h
po/: CMakeLists.txt  Messages.sh  de.po  dobeedo.pot  sk.po
